--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,21 @@
     tools:context=".MainActivity"
     tools:layout_editor_absoluteY="25dp">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:gravity="center"
-        android:orientation="vertical">
-
+        android:orientation="vertical"
+        android:gravity="center">
         <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
+            android:id="@+id/button_cash"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/hello" />
+            android:text='Compte espèce'/>
+        <Button
+            android:id="@+id/button_bank"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text='Compte banque'/>
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
